Fixing homepage image and aligning text(ish).css

--- a/public/frontPage.css
+++ b/public/frontPage.css
@@ -219,6 +219,8 @@ body{
   text-align: center;
   font-size: 1.5rem;
   font-family: 'Montserrat',sans-sarif;
+  padding-left: 50px;
+  padding-right: 50px;
 }
 .hero .col-md-4{
   align-content: center;
@@ -233,8 +235,9 @@ body{
 }
 .hero .col-md-4 img{
   width: 100%;
-  height: 100%;
   object-fit: cover;
+  padding-left: 25px;
+  padding-right: 25px;
 }
 
 /* Carousel Styles*/
